syntax = "proto3";

package proto;

option go_package = "github.com/two-phase-commit-demo/user/proto";

service UserService {
  rpc DeductWallet (DeductWalletRequest) returns (DeductWalletResponse);
}

message DeductWalletRequest {
  string user_id = 1;
  int32 price = 2;
}

message DeductWalletResponse {
  string message = 1;
  bool success = 2;
}
